# solana-explorer

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DOWNLOAD_SETUP.md  IMPLEMENTATION_COMPLETE.md  PR_SUMMARY.md  PULL_REQUEST.md  RAILWAY_DEPLOYMENT_FIXED.md  RAILWAY_NO_ROOT_SETTING.md  README.md  START_GUIDE.md  deploy-vercel.sh  docker-compose.yml  railway.toml
backend/: .env.example  .railwayignore  Cargo.toml  Dockerfile  Procfile  nixpacks.toml  railway.json
backend/migrations/: 001_init.sql
backend/src/: main.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: addresses.rs  admin.rs  auth.rs  blocks.rs  health.rs  markets.rs  mod.rs  network.rs  search.rs  tokens.rs  transactions.rs  user.rs
backend/src/services/: mod.rs
backend/src/utils/: mod.rs
frontend/: .env.example  .vercel-deploy.sh  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/pages/api/: blocks.ts  health.ts  markets.ts  search.ts  tokens.ts  transactions.ts
frontend/pages/api/network/: stats.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/blocks/: page.tsx
frontend/src/app/developer/: page.tsx
frontend/src/app/donate/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/tokens/: page.tsx
frontend/src/components/explorer/: LatestBlocks.tsx  LatestTransactions.tsx  NetworkStats.tsx  SearchBar.tsx
frontend/src/lib/: api-client.ts  utils.ts
(+5 files in other folders)
